# cake-pricing

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  renovate.json  schema.sql
.github/workflows/: build-and-push.yml  ci.yml
app/: __init__.py  config.py  db.py  i18n.py  main.py  metrics.py  models.py  templating.py
app/jobs/: price_sync.py
app/routers/: __init__.py  _helpers.py  calendar.py  components.py  customers.py  groups.py  intake.py  inventory.py  offers.py  recipes.py  settings.py  stats.py  templates.py
app/services/: __init__.py  calendar.py  mailer.py  offers.py  portability.py  price_sync.py  pricing.py  stats.py  stock.py
app/static/css/: app.css
app/static/js/: offer-form.js
app/templates/: _confirm.html  _macros.html  _sidebar.html  base.html
app/templates/calendar/: index.html
app/templates/components/: _detail.html  _quick_created.html  _quick_new.html  _rows.html  form.html  list.html
app/templates/customers/: _detail.html  _quick_created.html  _quick_new.html  _rows.html  form.html  list.html
app/templates/email/: _layout.html  price_report.html  price_report.txt
app/templates/groups/: form.html  list.html
app/templates/inventory/: _detail.html  _rows.html  list.html  receive.html
app/templates/offers/: _detail.html  _line.html  _rows.html  _sections.html  form.html  list.html
app/templates/recipes/: _detail.html  _rows.html  form.html  list.html
app/templates/settings/: index.html
app/templates/stats/: index.html
app/templates/templates/: _rows.html  form.html  list.html
docs/: ARCHITECTURE.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_intake.py  0003_price_sync.py
scripts/: xlsx_to_bundle.py
tests/: browser_offer_form.py  conftest.py  test_browser_modules.py  test_calendar.py  test_health.py  test_intake.py  test_integration.py  test_models.py  test_offer_amounts.py  test_offer_copy_recipe.py  test_price_sync.py  test_return_to.py  test_routes_smoke.py  test_security.py  test_stats.py
