[project]
name = "cake-pricing"
version = "0.1.0"
description = "Custom cake offer/pricing webapp for a one-person pastry business"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.18",
    "babel>=2.16",
    "prometheus-fastapi-instrumentator>=7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv]
# uv manages the venv + lockfile (uv.lock). Run `uv lock` then commit uv.lock.

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
